# bkmgr

./: Cargo.toml  README.md
src/: bookmark.rs  db.rs  main.rs  utils.rs
src/cmd/: add.rs  delete.rs  list.rs  mod.rs  open.rs  search.rs  test.rs
src/cmd/prompt/: event.rs  mod.rs  ui.rs
